added caching feature and connected streamlit UI

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 Python take-Home Assessment.pdf
 Screenshots/Fetching data/check_api_postman.PNG
 Screenshots/Fetching data/fetch_debug_response_structure.PNG
+~$thon take-Home Assessment.pdf
